apps/production/dozzle/ingress-patch.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dozzle
  namespace: dozzle
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - &host dozzle.fanen.dk
      secretName: dozzle-fanen-dk-tls
  rules:
    - host: *host
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: dozzle
                port:
                  name: http-dozzle
