apps/production/dozzle/route-patch.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: dozzle-route
  namespace: dozzle
spec:
  hostnames:
    - dozzle.fanen.dk
